@@ -447,6 +447,7 @@ export(stat_spoke)
 export(stat_sum)
 export(stat_summary)
 export(stat_summary2d)
+export(stat_summary_2d)
 export(stat_summary_hex)
 export(stat_unique)
 export(stat_ydensity)
