@@ -1,5 +1,5 @@
 #' @export
-#' @rdname stat_summary2d
+#' @rdname stat_summary_2d
 #' @inheritParams stat_binhex
 stat_summary_hex <- function(mapping = NULL, data = NULL, geom = "hex",
                              position = "identity", bins = 30, drop = TRUE,
