@@ -1,11 +1,12 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/stat-summary-2d.r, R/stat-summary-hex.r
-\name{stat_summary2d}
+\name{stat_summary_2d}
 \alias{stat_summary2d}
+\alias{stat_summary_2d}
 \alias{stat_summary_hex}
 \title{Bin and summarise in 2d (rectangle & hexagons)}
 \usage{
-stat_summary2d(mapping = NULL, data = NULL, geom = "rect",
+stat_summary_2d(mapping = NULL, data = NULL, geom = "rect",
   position = "identity", bins = 30, drop = TRUE, fun = "mean",
   fun.args = list(), show.legend = NA, inherit.aes = TRUE, ...)
 
@@ -49,9 +50,9 @@ include aesthetics whose values you want to set, not map. See
 \code{\link{layer}} for more details.}
 }
 \description{
-\code{stat_summary2d} is a 2d variation of \code{\link{stat_summary}}.
+\code{stat_summary_2d} is a 2d variation of \code{\link{stat_summary}}.
 \code{stat_summary_hex} is a hexagonal variation of
-\code{\link{stat_summary2d}}. The data are divided into bins defined
+\code{\link{stat_summary_2d}}. The data are divided into bins defined
 by \code{x} and \code{y}, and then the values of \code{z} in each cell is
 are summarised with \code{fun}.
 }
@@ -65,12 +66,12 @@ are summarised with \code{fun}.
 }
 \examples{
 d <- ggplot(diamonds, aes(carat, depth, z = price))
-d + stat_summary2d()
+d + stat_summary_2d()
 
 # Specifying function
-d + stat_summary2d(fun = function(x) sum(x^2))
-d + stat_summary2d(fun = var)
-d + stat_summary2d(fun = "quantile", fun.args = list(probs = 0.1))
+d + stat_summary_2d(fun = function(x) sum(x^2))
+d + stat_summary_2d(fun = var)
+d + stat_summary_2d(fun = "quantile", fun.args = list(probs = 0.1))
 
 if (requireNamespace("hexbin")) {
 d + stat_summary_hex()
